--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
   "domain": "auto_ui",
   "name": "Auto UI",
-  "integration_type": "hub",
   "documentation": "https://www.example.com",
   "dependencies": [],
   "codeowners": ["joel@spiers.cc"],
   "requirements": [],
-  "iot_class": "cloud_polling"
+  "version": "v1.0.0"
 }
